--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,11 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/auth/google": {
+      "target": "http://localhost:5000"
+    }
+  },
   "dependencies": {
     "animate.css": "^3.5.2",
     "autoprefixer": "7.1.6",
