--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": {
-    "/auth/google": {
+    "/auth/*": {
+      "target": "http://localhost:5000"
+    },
+    "/api/*": {
       "target": "http://localhost:5000"
     }
   },
@@ -46,6 +49,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "querystring": "^0.2.0",
     "raf": "3.4.0",
     "react": "^16.0.0",
     "react-animate-on-scroll": "^1.3.2",
@@ -61,7 +65,9 @@
     "react-scroll": "^1.7.3",
     "react-scroll-parallax": "^1.1.0",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "ress": "^1.2.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
