--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "file-loader": "^1.1.6",
     "mongoose": "^4.13.6",
     "nodemon": "^1.12.5",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "querystring": "^0.2.0"
   }
 }
