--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": {
-    "/auth/*": {
+    "/auth/google": {
+      "target": "http://localhost:5000"
+    },
+    "/auth/facebook": {
       "target": "http://localhost:5000"
     },
     "/api/*": {
