--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": {
-    "/auth/google": {
-      "target": "http://localhost:5000"
-    },
-    "/auth/facebook": {
+    "/auth/*": {
       "target": "http://localhost:5000"
     },
     "/api/*": {
