--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     },
     "/api/*": {
       "target": "http://localhost:5000"
+    },
+    "/video": {
+      "target": "http://localhost:5000"
     }
   },
   "dependencies": {
