--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "file-loader": "^1.1.6",
+    "fs": "0.0.1-security",
     "mongoose": "^4.13.6",
     "nodemon": "^1.12.5",
     "passport": "^0.4.0",
