--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
     "path-parser": "^3.0.1",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "video-react": "^0.9.3"
   }
 }
