--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "csurf": "^1.9.0",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "file-loader": "^1.1.6",
     "fs": "0.0.1-security",
     "mongoose": "^4.13.6",
+    "nodemailer": "^4.4.1",
     "nodemon": "^1.12.5",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
