--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
+    "json:server": "json-server --watch db.json",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -24,13 +25,18 @@
     "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "crypto": "^1.0.1",
     "csurf": "^1.9.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-graphql": "^0.6.11",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "file-loader": "^1.1.6",
     "fs": "0.0.1-security",
+    "graphql": "^0.12.3",
+    "json-server": "^0.12.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.13.6",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.12.5",
