--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,17 @@
     },
     "/video": {
       "target": "http://localhost:5000"
+    },
+    "/graphql": {
+      "target": "http://localhost:5000"
     }
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "apollo-cache-inmemory": "^1.1.4",
+    "apollo-client": "^1.9.3",
+    "apollo-link": "^1.0.7",
+    "apollo-link-http": "^1.3.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.17.0",
     "babel-core": "6.26.0",
@@ -41,6 +48,7 @@
     "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
     "gh-pages": "^1.0.0",
+    "graphql-tag": "^2.6.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jquery": "^3.2.1",
@@ -56,6 +64,7 @@
     "raf": "3.4.0",
     "react": "^16.0.0",
     "react-animate-on-scroll": "^1.3.2",
+    "react-apollo": "^2.0.4",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
