--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
     "react-fontawesome": "^1.6.1",
     "react-hot-loader": "^3.1.3",
     "react-intercom": "^1.0.13",
+    "react-materialize": "^1.1.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "4.1.2",
