--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "fancybox": "^3.0.0",
     "file-loader": "1.1.5",
+    "filestack-js": "^0.10.1",
     "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
     "gh-pages": "^1.0.0",
