--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
+    "api": "PORT=5000 nodemon server.js",
     "json:server": "json-server --watch db.json --port 4000",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -25,6 +26,7 @@
     "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "csurf": "^1.9.0",
     "dotenv": "^4.0.0",
@@ -33,11 +35,13 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "file-loader": "^1.1.6",
+    "filestack-js": "^0.10.1",
     "fs": "0.0.1-security",
     "graphql": "^0.12.3",
     "json-server": "^0.12.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.6",
+    "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.12.5",
     "passport": "^0.4.0",
